--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/datetimepicker": "^2.6.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.5",
+    "@react-navigation/bottom-tabs": "^5.7.3",
     "date-fns": "^2.15.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
