--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.15.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
