--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-table-component": "^1.2.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0"
