--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.63.2",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-material-ui": "^1.30.1",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
