--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-material-ui": "^1.30.1",
+    "react-native-paper": "^4.4.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
@@ -32,6 +33,7 @@
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.0",
+    "react-navigation-material-bottom-tabs": "^2.3.3",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0"
   },
