--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@react-navigation/bottom-tabs": "^5.7.3",
     "date-fns": "^2.15.0",
     "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react-devtools": "^4.10.1",
+    "react-native": "^0.63.3",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-material-ui": "^1.30.1",
