--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
         "lint": "eslint ."
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.30",
         "@fortawesome/free-regular-svg-icons": "^5.14.0",
         "@fortawesome/free-solid-svg-icons": "^5.14.0",
         "@fortawesome/react-native-fontawesome": "^0.2.5",
         "@react-native-community/async-storage": "^1.12.0",
         "@react-native-community/datetimepicker": "^2.6.1",
         "@react-native-community/masked-view": "^0.1.10",
-        "@react-native-community/picker": "^1.6.5",
+        "@react-native-picker/picker": "^1.9.8",
         "@react-navigation/bottom-tabs": "^5.7.3",
         "@react-navigation/material-bottom-tabs": "^5.3.10",
         "@react-navigation/native": "^5.8.10",
@@ -26,11 +27,11 @@
         "react-native": "^0.63.3",
         "react-native-gesture-handler": "^1.9.0",
         "react-native-material-ui": "^1.30.1",
+        "react-native-paper": "^4.5.0",
         "react-native-reanimated": "^1.13.2",
         "react-native-safe-area-context": "^3.1.9",
         "react-native-screens": "^2.16.1",
         "react-native-svg": "^12.1.0",
-        "react-native-table-component": "^1.2.1",
         "react-native-vector-icons": "^7.1.0",
         "react-navigation": "^4.4.0",
         "react-navigation-tabs": "^2.9.0"
