--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "@react-navigation/native": "^5.8.10",
         "@react-navigation/stack": "^5.12.8",
         "date-fns": "^2.15.0",
+        "lodash.isequal": "^4.5.0",
+        "lodash.uniqby": "^4.7.0",
+        "lodash.uniqwith": "^4.5.0",
         "react": "16.13.1",
         "react-native": "^0.63.3",
         "react-native-gesture-handler": "^1.9.0",
